--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,31 @@ p {
   font-weight: bold;
 }
 
+a:link {color: blue;}
+a:visited {color: purple;}
+a:hover {color: red;}
+a:active {color: yellow;}
+
+.username a:link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.username a:visited {
+  color: #000000;
+  text-decoration: none;
+}
+
+.username a:hover {
+  color: #1DA1F2;
+  text-decoration: underline;
+}
+
+.username a:active {
+  color: #1DA1F2;
+  text-decoration: underline;
+}
+
 .handle, .timestamp {
   color: #b0b0b0;
 }
