--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ p {
   height: 50px;
   width: 100%;
   min-width: 1200px;
+  z-index: 2;
 }
 
 #leftsidebar, #rightsidebar, #timeline {
@@ -46,14 +47,14 @@ p {
 }
 
 #leftsidebar {
-  background-color: orange;
+  background-color: transparent;
   width: 300px;
   height: 300px;
   float: left;
 }
 
 #rightsidebar {
-  background-color: orange;
+  background-color: transparent;
   width: 300px;
   height: 300px;
   float: left;
@@ -66,18 +67,61 @@ p {
   float: left;
 }
 
+#refresh {
+    background-color: #f2f5f6;
+    border: none;
+    color: #1DA1F2;
+    height: 45px;
+    font-size: 1em;
+    text-align: center;
+    width: 100%;
+}
+
+#refresh:hover {
+  background-color: #d9dddf;
+}
+
 #activeuser {
-  background-color: red;
-  height: 200px;
+  background-color: #ffffff;
+  height: 210px;
+}
+
+#identity {
+  float: right;
+  width: 186px;
+}
+
+#identity h3 {
+  line-height: 18px;
+  margin: 5px 0px 0px;
+}
+
+#photo {
+  position: relative;
+  background-color: #1da1f2;
+  width: 100%;
+  height: 100px;
+}
+
+#me {
+  background-color: #1da1f2;
+  border: 4px solid #ffffff;
+  border-radius: 41px;
+  width: 66px;
+  height: 66px;
+  float: left;
+  margin: 68px 10px auto ;
+  position: relative;
+  z-index: 1;
 }
 
 #trending {
-  background-color: yellow;
+  background-color: #ffffff;
   height: 400px;
 }
 
 #followrecs {
-  background-color: green;
+  background-color: #ffffff;
   height: 300px;
 }
 
@@ -100,7 +144,7 @@ a:active {color: yellow;}
   text-decoration: underline;
 }
 
-.handle, .timestamp {
+.handle, .timestamp, #identity p {
   color: #b0b0b0;
 }
 
@@ -109,6 +153,10 @@ a:active {color: yellow;}
   border-bottom: 1px solid #e6ecf0;
   padding: 10px;
   margin: 1px auto;
+}
+
+.hover-tweet {
+  background-color: #f2f5f6;
 }
 
 #twit {
