--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ p {
 }
 
 #me {
-  background-color: #1da1f2;
+  overflow: hidden;
   border: 4px solid #ffffff;
   border-radius: 41px;
   width: 66px;
@@ -146,6 +146,11 @@ p {
   margin: 68px 10px auto ;
   position: relative;
   z-index: 1;
+}
+
+#big-avatar {
+  width: 100%;
+  height: 100%;
 }
 
 #trending {
@@ -182,6 +187,25 @@ p {
   float: left;
   padding: 10px;
   margin: 1px auto;
+}
+
+.tweet-content {
+  float: left;
+}
+
+.avatar {
+  overflow: hidden;
+  float: left;
+  border: 1px solid transparent;
+  border-radius: 21px;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
 }
 
 .hover-tweet {
